# AI-15-demo

./: AI金融研学实训营研究参考主题.docx  ~$金融研学实训营研究参考主题.docx  中国商品期货机器学习因子投资_零基础金融概念教程.md  中国商品期货机器学习因子投资_项目框架搭建讲解.md
cn-futures-factor-lab/: .env.example  .gitignore  Makefile  README.md  environment.yml  pyproject.toml
cn-futures-factor-lab/.pytest_cache/v/cache/: nodeids
cn-futures-factor-lab/.ruff_cache/0.15.22/: 2079793123157198167
cn-futures-factor-lab/artifacts/.cache/matplotlib/: fontlist-v3.11.0.json
cn-futures-factor-lab/artifacts/real_demo/: cost_scenarios.csv  daily_returns.csv  period_metrics.csv  report.md
cn-futures-factor-lab/configs/: backtest.yaml  base.yaml  factors.yaml  field_mappings.yaml  field_mappings_sufe_all_contracts.yaml  field_mappings_sufe_vendor_main.yaml  research.yaml  universe.yaml
cn-futures-factor-lab/data/interim/: sufe_contract_daily.parquet.manifest.json
cn-futures-factor-lab/docs/: 01_新手上手指南.md  02_上财数据导出与接入.md  03_架构与扩展指南.md  04_方法与防泄漏.md  05_标准数据字典.md  06_团队协作规范.md  07_后续研究任务与完整实验路线图.md  08_当前项目进度与团队统一认知.md
cn-futures-factor-lab/notebooks/: README.md
cn-futures-factor-lab/src/cn_futures_factor/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logging.py  paths.py
cn-futures-factor-lab/src/cn_futures_factor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cn-futures-factor-lab/tests/: test_contracts.py  test_demo_pipeline.py  test_execution_lag.py  test_main_contract.py  test_metrics.py  test_no_lookahead.py  test_robustness.py  test_sufe_mapping.py  test_validation.py
(+50 files in other folders)
